--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.18.0",
-    "next": "14.0.4",
+    "@reduxjs/toolkit": "^2.2.4",
+    "@supabase/supabase-js": "^2.43.1",
+    "framer-motion": "^11.1.9",
+    "geist": "^1.3.0",
+    "next": "14.2.3",
     "next-pwa": "^5.6.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.10",
+    "@types/node": "^20.12.11",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
